# ExjobbROV

./: .gitignore  README.md  newSyms.m
.SimulinkProject/: ProjectData.type.Info.xml
Documents/: README  dataOrder.txt
Documents/Half_time/: notation.tex  presentation.tex
Documents/Master/: main.tex  mynotation.sty  mythesis.sty
Documents/Presentation/: notation.tex  presentation.aux  presentation.blg  presentation.nav  presentation.out  presentation.tex  presentation.toc
ardupilot-bluerov-apm/: README.md
ardupilot-bluerov-apm/APMrover2/: Steering.pde  system.pde
catkin_ws/: Controller.tgz  calibratemag.sh  log.sh  makerov.sh  restartFilter.sh  scpmakerov.sh  shutdownrasp.sh  startrov.sh  startworkstation.sh  test.sh  thrusterTest.sh
catkin_ws/devel/: .catkin  .rosinstall  setup.sh
catkin_ws/src/bluerov/: CMakeLists.txt  package.xml
catkin_ws/src/bluerov/config/: matlab_controller.config  pid_parameters.config  teleop_xbox.config
catkin_ws/src/bluerov/extra/: 99-bluerov.rules  newperspective.perspective
catkin_ws/src/bluerov/launch/: apm.launch  bluerov_arduino.launch  camera.launch  controller.launch  default.perspective  heartbeat_rovio.launch  launch_rqt.sh  matlab_controller.launch  rov_core.launch  sensorfusion.launch  teleop_xbox.launch  workstation.launch
catkin_ws/src/bluerov/src/: heartbeat_rovio.cpp  matlab_controller.cpp  simple_pilot.cpp  teleop_xbox.cpp
catkin_ws/src/matlab_messages/: CMakeLists.txt  package.xml  readme.txt
catkin_ws/src/matlab_messages/matlab_gen/jar/: matlab_messages-1.md5
catkin_ws/src/matlab_messages/matlab_gen/msggen/+robotics/+ros/+custom/+msggen/: CustomMsgConsts.m
catkin_ws/src/matlab_messages/matlab_gen/msggen/+robotics/+ros/+custom/+msggen/+matlab_messages/: Sensors.m  States.m
catkin_ws/src/matlab_messages/msg/: Sensors.msg  States.msg  package.xml
requiredmsgs/: readme.txt
requiredmsgs/mavros_msgs/: package.xml
simulink/: Controller.slx  Controller2.slx  Controller_without_ref.slx  Controller_without_ref.tgz  Decoupler.slx  PWMtoForce.m  acc_to_v.slx  build_ros_model.sh  calcderivatives.m  decController.slx  estimateRovModel.m  getReference.m  motionmodel.m  reference_block.slx  retriveImuData.m  rovMotionModel.m  sensorfusion.slx  simulator.slx  simulatorScript.m  smoothStep.m  smoottestscript.m  symsmotionmodel.m  telegraph.slx  thruster6.m  thrustplot.m  toPWM.slx  toPWM2.slx
simulink/Estimation/: AllCongparameters.mat  angleIntegration.m  antiModAngles.m  debugg.m  displayTable.m  estimateRovModel.m  estimateRovModel.m~  fossenIntegration.m  fossentest.m  getSimulationData.m  getTestData.m  initROVParameters.m  integrateAcc.m  kalmanAcceleration.m  loadAll0404.m  loadAll0418.m  loadPitch0321.m  loadPitch0404.m  loadRollPitch0321.m  loadRollPitch0404.m  loadRollPitch0418.m  loadYaw0321.m  loadYaw0404.m  loadYaw0418.m  nakeinterp1.c  parameters.mat  plotData.m  removeGravity.m  resampleControlSignals.m  retriveData.m  retriveData.m~  rollpitchparameters.mat  rollpitchparameters2.mat  rovMotionModel.m  rovMotionModelAll.m  rovMotionModelAllCong.m  rovMotionModelAllSimple.m  rovMotionModelPitch.m  rovMotionModelPitchCongregated.m  rovMotionModelRollPitch.m  (+11 more)
simulink/Estimation_raw/: BestAsOf9May.mat  BestLz6=0.mat  BestLz6=0AllDataSets.mat  BestLz6Locked.mat  SimulatorLoadParam.m  angleIntegration.m  blackBoxSyms.m  config.mat  eriksBestParameters.mat  estimateRovModel.m  estimatorTest.m  getExpectedMeasurements.m  getGvMatrix.m  getGvMatrixBlackBox.m  getMeasurementJacobian.m  getMeasurementJacobianBlackBox.m  getSystemJacobian.m  getSystemJacobianBlackBox.m  getTestData.m  gradeOfFit.m  initROVParameters.m  kalmanEstimator.m  kalmanEstimatorBlackBox.m  loadAll0418.m  loadRollPitch0418.m  measData.mat  newSyms.m  normQuaternions.m  outlierReject.m  parametersErik.mat  params.mat  plotData.m  quatSim.slx  quatSim1.slx  resampleControlSignals.m  rovMotionModelAll.m  rovMotionModelAllCong.m  rovMotionModelRollPitch.m  rovMotionModelYaw.m  saveParameters.m  (+6 more)
simulink/Estimation_raw_cont/: cont.mat  estimateRovModel.m  getExpectedMeasurements.m  getGvMatrix.m  getMeasurementJacobian.m  getSimulationData.m  getSystemJacobian.m  getTestData.m  initROVParameters.m  initialEkf.m  initialSmoother.m  loadAll0418.m  loadYaw0418.m  newSyms.m  normQuaternions.m  parameters.mat  parforloadAll0418.m  quatSim.slx  rovMotionModelAllCong.m  rovMotionModelAllCong_c.c  rovMotionModelAllCong_disc_c.c  rovMotionModelAllSuperCong_c.c  rovMotionModelRollPitchCong.m  rovMotionModelYawCong.m  rtau.mat  setupEstimation.m  simTest.m  simulateROV.m  simulator_model.slx  tau.mat  thrusterLookup.m  timeStep.m
simulink/Estimation_without_states/: Allparameters.mat  antiModAngles.m  (+33 more)
test/catkin_ws/src/liurov/: CMakeLists.txt  package.xml
test/catkin_ws/src/liurov/config/: teleop_xbox.config
test/catkin_ws/src/liurov/include/: controller.h  teleop_xbox.h
test/catkin_ws/src/liurov/launch/: export_video.launch  teleop_xbox.launch
test/catkin_ws/src/liurov/src/: controller.cpp
(+568 files in other folders)
