<?xml version="1.0"?>
<package>
  <name>liurov</name>
  <version>0.3.0</version>
  <description>ROV built for master thesis in control at ISY Linkopings University.</description>

  <maintainer email="erikekelund91@gmail.com">Erik Ekelund</maintainer>
  <license>ToDo</license>
  <url type="website">Todo</url>
  <author email="erikekelund91@gmail.com">Erik Ekelund</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>joy</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>joy</run_depend>
  <run_depend>message_runtime</run_depend>
</package>
